--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -6,16 +6,19 @@ metadata:
 uid: certification.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
+  Wenn Sie ein funktionaler Berater oder ein Fachmann sind, der Microsoft Dynamics 365 Marketing im täglichen Geschäftsbetrieb seines Unternehmens einsetzt, oder ein Entwickler, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein und Ihnen ermöglichen, sich effektiver für Projekte und Werbeaktionen zu positionieren.
+  
+  Als Kandidat für diese Zertifizierung kennen Sie die modellgetriebenen Dynamics 365-Anwendungen und Datenmodellierungsprinzipien und können die Microsoft Power Platform konfigurieren. Sie implementieren Marketinginitiativen wie Kampagnen, E-Mails und Kundenreisen. Sie haben Erfahrung in der Zusammenarbeit mit den Interessenvertretern eines Unternehmens, um Anforderungen zu erfassen und Dynamics 365 Marketing-Lösungen zu implementieren. Darüber hinaus konfigurieren Sie Dynamics 365 Marketing und richtenorganisatorische Sicherungsmaßnahmen von Dynamics 365 ein. Sie erweitern sogar Dynamics 365-Lösungen mit Power Platform-Komponenten wie z.B. Power Automate und Power Apps.
+  
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
+  - Arbeiten Sie an einem modellgetriebenen App-Implementierungsprojekt für Dynamics 365.
+  - Schauen Sie einem Funktionsberater oder einem Lösungsarchitekten über die Schulter, der mit  Dynamics 365 Marketing arbeitet.
+  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
+  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
 subTitle: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 levels:
 - intermediate
 skills:
-- Konfigurieren Sie den allgemeinen Datenservice 
-- Erstellen Sie Apps mit Hilfe von Power Apps 
-- Erstellen und Verwalten Sie Power Automate 
-- Implementieren Sie Power Virtual Agents Chatbots 
-- Integrieren Sie Power Apps in andere Apps und Services
 - Konfigurieren von Marketinganwendungen
 - Segmente und Listen verwalten
 - Marketingformulare und Seiten erstellen und verwalten
@@ -24,6 +27,11 @@ skills:
 - Kunden-Journeys verwalten
 - Verwaltung von Veranstaltungen und Webinaren
 - Dynamics 365 Customer Voice konfigurieren
+- Konfigurieren Sie den allgemeinen Datenservice
+- Erstellen Sie Apps mit Hilfe von Power Apps
+- Erstellen und Verwalten Sie Power Automate
+- Implementieren Sie Power Virtual Agents Chatbots
+- Integrieren Sie Power Apps in andere Apps und Services
 roles:
 - functional-consultant
 type: role-based
