--- a/learn-certs-pr/d365-functional-consultant-sales.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales.yml
@@ -7,19 +7,27 @@ uid: certification.d365-functional-consultant-sales
 certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
+  Wenn Sie ein funktionaler Berater, ein Fachmann, der mit Microsoft Dynamics 365 Sales arbeitet, oder ein Entwickler sind, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein. Sie können sich effektiver für Projekte vermarkten und Ihrem Unternehmen zeigen, dass Sie Dynamics 365 Sales anwenden können, um das Vertriebsteam zu stärken.
+  
+  Als Kandidat für diese Zertifizierung verfügen Sie über Erfahrung in der Konfiguration von Microsoft Power Platform und kennen die modellgetriebenen Dynamics 365-Anwendungen und Datenmodellierungsprinzipien. Sie arbeiten mit den Interessenvertretern eines Unternehmens zusammen, um Anforderungen zu erfassen und Dynamics 365 Sales-Lösungen zu implementieren. Sie verwalten Leads, Chancen, Angebote und Bestellungen und konfigurieren Produktkataloge und Preislisten. Darüber hinaus konfigurieren Sie Dynamics 365 Sales so, dass es dem einzigartigen Geschäftsprozess Ihres Unternehmens entspricht, und Sie modellieren Dynamics 365 Sales Verkaufsdaten. Sie erweitern sogar Dynamics 365-Lösungen mit Power Platform-Komponenten wie z.B. Power Automate und Power Apps.
+  
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
+  - Arbeiten Sie an einem modellgetriebenen App-Implementierungsprojekt für Dynamics 365.
+  - Schauen Sie einem Funktionsberater oder einem Lösungsarchitekten über die Schulter, der mit Dynamics 365 Sales arbeitet.
+  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
+  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
 subTitle: Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
 levels:
 - intermediate
 skills:
-- Konfigurieren Sie den allgemeinen Datenservice 
-- Erstellen Sie Apps mit Hilfe von Power Apps 
-- Erstellen und Verwalten Sie Power Automate 
-- Implementieren Sie Power Virtual Agents Chatbots 
-- Integrieren Sie Power Apps in andere Apps und Services
 - Konfiguration durchführen
 - Die wichtigsten Vertriebseinheiten verwalten
 - Zusätzliche Tools und Services konfigurieren
+- Konfigurieren Sie den allgemeinen Datenservice
+- Erstellen Sie Apps mit Hilfe von Power Apps
+- Erstellen und Verwalten Sie Power Automate
+- Implementieren Sie Power Virtual Agents Chatbots
+- Integrieren Sie Power Apps in andere Apps und Services
 roles:
 - functional-consultant
 type: role-based
