--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -7,15 +7,16 @@ uid: exam.ai-100
 displayName: AI-100
 summary: |-
   <div>
+  <div><font color='red'><strong>EINE NEUE VERSION DIESER PRÜFUNG, <a href='/learn/certifications/exams/ai-102'>AI-102</a>, WIRD AM 23. FEBRUAR 2021 VERFÜGBAR SEIN. Sie können diese Prüfung ablegen, bevor sie am 30. Juni 2021 eingestellt wird. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong></font><br/><br/></div>
   <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
-
+  
   Kandidaten für diese Prüfung sollten über Fachkenntnisse in kognitiven Diensten, maschinellems Lernen und Knowledge-Mining nutzen, um Microsoft exams Lösungen zu entwickeln und zu implementieren, die Verarbeitung natürlicher Sprache, gesprochener Sprache, Computervision und Konversations-AI umfassen.
-
+  
   Zu den Aufgaben eines Azure AI-Ingenieurs gehören das Analysieren von Anforderungen für AI-Lösungen, das Empfehlen entsprechender Tools und Technologien sowie das Entwerfen und Implementieren von AI-Lösungen, die die Anforderungen an Skalierbarkeit und Leistung erfüllen.
-
+  
   Azure AI Engineers übersetzen die Ideen von Lösungsarchitekten und arbeiten mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und software Entwicklern zusammen, um komplette End-to-End-Lösungen zu entwickeln.
-
+  
   Ein Kandidat für diese Prüfung sollte über Kenntnisse und Erfahrung im Entwerfen und Implementieren von KI-Apps und Agenten verfügen, die Microsoft Azure Cognitive Services, Azure Bot-Service, Azure Cognitive Search und Datenspeicherung in Azure verwenden. Darüber hinaus sollten Kandidaten in der Lage sein, Lösungen zu empfehlen, die Open Source-Technologien verwenden, die Komponenten des Azure AI-Portfolios und die verfügbaren Datenspeicheroptionen zu verstehen und zu erkennen, wann eine benutzerdefinierte API entwickelt werden sollte, um bestimmte Anforderungen zu erfüllen.
 subTitle: 'Dieses Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Analyse der Lösungsanforderungen, Entwurf von Lösungen, Integration von AI-Modellen in Lösungen sowie Bereitstellung und Verwaltung von Lösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -29,7 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.'
+- Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Lösungsanforderungen analysieren (25-30%)
 - Konzipieren von AI-Lösungen (40-45%)
 - Implementieren und Überwachen von AI-Lösungen (25-30%)
