--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -7,13 +7,14 @@ uid: exam.dp-201
 displayName: DP-201
 summary: |-
   <div>
+  <div><font color='red'><strong>EINE NEUE VERSION DIESER PRÜFUNG, <a href='/learn/certifications/exams/dp-203'>DP-203</a>, WIRD AM 23. FEBRUAR 2021 VERFÜGBAR SEIN. Sie können diese Prüfung ablegen, bevor sie am 30. Juni 2021 eingestellt wird. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong></font><br/><br/></div>
   <div><strong> Der Inhalt dieser Prüfung wurde am 31. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
-
+  
   Kandidaten für dieses examens sind Microsoft Azure-Dateningenieure, die mit Geschäftsinteressenten zusammenarbeiten, um die Datenanforderungen für die Design von Datenlösungen zu ermitteln und zu erfüllen, die Azure-Datendienste verwenden.
-
+  
   Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, einschließlich der Entwicklung von Azure-Datenspeicherlösungen, die relationale und nicht-relationale Datenspeicher, Batch- und Echtzeit-Datenverarbeitungslösungen sowie Datensicherheits- und Compliance-Lösungen verwenden.
-
+  
   Die Kandidaten für diese Prüfung müssen Datenlösungen entwickeln, die die folgenden Azure-Dienste verwenden&#58; Azure Cosmos DB, Azure Synapse Analytics, Azure SQL Data Warehouse, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
 subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Design von Azure-Datenspeicherlösungen, Design von Datenverarbeitungslösungen und Design für Datensicherheit und Konformität.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -32,6 +33,7 @@ skills:
 - Entwickeln von Azure-Datenspeicherlösungen (40-45%)
 - Entwerfen von Datenverarbeitungslösungen (25-30%)
 - Entwickeln für Datensicherheit und Compliance (25-30%)
+retirementDate: 06/30/2021
 roles:
 - data-engineer
 products:
