--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -9,11 +9,11 @@ summary: |-
   <div>
   <div><strong>Der Inhalt dieser Prüfung wird am Freitag, 2. Oktober 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
-
+  
   Kandidaten für dieses examens sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die einen Vertriebslebenszyklus unterstützen, um effizient und effektiv zu arbeiten und Umsatzziele, Geschäftsstrategien und Unternehmensziele zu erreichen.
-
+  
   Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernfunktionalität von Leitfäden, Kontakten, Accounts, Gelegenheiten und unterstützenden Einrichtungen, um die im Unternehmen bestehenden Verkaufsprozesse abzubilden. Sie identifizieren Möglichkeiten, Power Apps zu nutzen, um einheitliche Erlebnisse für alle Geräte zu entwickeln, Power Automate für die Anwendungsintegration, Geschäftsprozessabläufe und andere Automatisierungstools, um eine Anwendung zu erstellen, die die Lead to cash journey. unterstützt und beschleunigt.
-
+  
   Die Kandidaten müssen über fundierte betriebswirtschaftliche Kenntnisse und vorzugsweise über erste persönliche Erfahrungen in der Vertriebswelt in einer oder mehreren Vertriebsfunktionen verfügen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfiguration durchführen, Kernvertriebseinheiten verwalten und zusätzliche Tools und Services konfigurieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -35,7 +35,7 @@ products:
 - dynamics-365
 - dynamics-sales
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-210t01
 paths:
