--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -6,14 +6,12 @@ metadata:
 uid: exam.mb-220
 displayName: MB-220
 summary: |-
-  <div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 15. Januar 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
-  </div>
-
+  <div><strong>Der Inhalt dieser Prüfung wurde am 15. Januar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  
   Kandidaten für diese Prüfung sind funktionale Berater für Dynamics 365 Marketing. Die Teilnehmer sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufzubauen, Omnichannel-Messaging zu standardisieren und Marketinginformationen zu liefern.
-
+  
   Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung um E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Voice of the Customer, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung (GDPR).
-
+  
   Kandidaten sollten über Kenntnisse der Marketingprinzipien und der Rolle der Marketinganwendung in Bezug auf die Microsoft Dynamics 365 Anwendungssuite verfügen, einschließlich der Integration von Microsoft Dynamics 365 und Office 365 Anwendungen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgaenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen; Segmente und Listen verwalten; Erstellen und Verwalten von Marketingformularen und -seiten; Leads, Kontakte und Konten verwalten; Erstellen und Verwalten von Marketing-E-Mails; Kundenreisen verwalten; Veranstaltungen und Webinare verwalten; und Dynamics 365 Customer Voice konfigurieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -25,7 +23,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 15. Januar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich ändern wird. 
+- Der Inhalt dieser Prüfung wurde am 15. Januar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die zur Prüfungskompetenz herunter, um zu sehen, was sich geändert hat.
 - Konfigurieren von Marketinganwendungen (20-25%)
 - Segmente und Listen verwalten (5-10%)
 - Marketingformulare und Seiten erstellen und verwalten (10-15%)
@@ -40,7 +38,7 @@ products:
 - dynamics-365
 - dynamics-marketing
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-220t00
 paths:
