--- a/learn-certs-pr/exams/mb-230.yml
+++ b/learn-certs-pr/exams/mb-230.yml
@@ -9,12 +9,12 @@ summary: |-
   <div>
   <div><strong>Der Inhalt dieser Prüfung wird am Freitag, 2. Oktober 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
-
+  
   Ein Dynamics 365 Customer Service Functional Consultant ist für die Implementierung von Omnichannel-Lösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
   <br/>
-
+  
   Ein Dynamics 365 Kundendienst-Fachberater implementiert und entwirft Visualisierungen und Berichte für das Service-Management, die vom Lösungsarchitekten und in Zusammenarbeit mit ihm bereitgestellt werden. Der Fachberater arbeitet mit dem Administrator für Kundenbindung zusammen, um Power Platform-Komponenten zu implementieren und zu aktualisieren, einschließlich Wissensmanagement, Kundenfeedback und verbundenen Diensten.
-
+  
   Ein Dynamics 365 Kundendienst-Fachberater muss über fundierte Kenntnisse im Kundenservice verfügen, einschließlich&#58; Verständnis der Branchenterminologie, Prioritäten, Standards, Methoden, Kundenservice-Vorgänge und bewährte Praktiken. Der Fachberater mit Kundendienstkompetenz muss über fundiertes Wissen verfügen, um die Benutzeranforderungen durch den Dynamics 365-Kundendienst zu erfüllen, einschließlich eines umfassenden Verständnisses von Fällen, Wissensmanagement, Warteschlangen, Berechtigungen, der Ressourcenplanung, der Dienstleistungvereinbarungen(SLAs), Visualisierungen, verbundener Services, Kundendiensterkenntnisse, virtuelle Power-Agenten und Omnichannel für den Kundenservice. Der Fachberater sollte über umfassendes Verständnis der Rolle der Kundendienstanwendung in Bezug auf die Anwendungssuite Dynamics 365 sowie ein grundlegendes Verständnis der Lösungsarchitektur und Qualitätssicherung mitbringen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Fällen und Wissensmanagement; Verwalten von Warteschlangen, Berechtigungen und Dienstleistungsvereinbarungen; Zeitplanung implementieren; Omnichannel für den Kundenservice implementieren sowie Analysen verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -38,7 +38,7 @@ products:
 - dynamics-365
 - dynamics-customer-service
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-230t01
 paths:
