--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -6,15 +6,13 @@ metadata:
 uid: exam.mb-240
 displayName: MB-240
 summary: |-
-  <div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 15. Januar 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
-  </div>
-
-  Kandidaten für diese Prüfung sind Dynamics 365-Berater für Kundenbindung mit Fachkenntnissen im Außendienst. Die Teilnehmer sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.
-
+  <div><strong>Der Inhalt dieser Prüfung wurde am 15. Januar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  
+  Kandidaten für diese Prüfung sind Microsoft Dynamics 365 Customer Engagement mit Fachkenntnissen im Außendienst. Die Teilnehmer sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.
+  
   Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Außendienst-Anwendung, die Bereitstellung der angeschlossenen Außendienst (IoT)-Lösung und der mobilen Anwendung sowie die Implementierung zusätzlicher notwendiger Anpassungen. Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
-
-  Die Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten der Außendienstanwendung verfügen, einschließlich der Konfiguration von Diensten, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der Lösung Connected Field Service (IoT) und der Konfiguration der Field Service Mobile App.
+  
+  Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten zur Außendienstanwendung verfügen, einschließlich der Konfiguration von Services, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der angeschlossenen Außendienst (IoT)-Lösung und der Konfiguration der mobilen Field Service-App. Die Kandidaten müssen mit der auf Microsoft Power Apps basierenden mobilen Anwendung vertraut sein. Die auf Xamarin basierende mobile Anwendung wird in dieser Prüfung nicht behandelt.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfigurieren von Außendienstanwendungen; Arbeitsaufträge verwalten; Arbeitsaufträge planen und versenden; Verwaltung der Mobilität vor Ort; Inventar und Einkauf verwalten; und angeschlossenen Außendienst implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
@@ -25,7 +23,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 15. Januar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wurde am 15. Januar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die zur Prüfungskompetenz herunter, um zu sehen, was sich geändert hat.
 - Außendienstanwendungen konfigurieren (15-20%)
 - Verwaltung von Arbeitsaufträgen (15-20%)
 - Arbeitsaufträge planen und versenden (25-30%)
@@ -38,7 +36,7 @@ products:
 - dynamics-365
 - dynamics-field-service
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-240t00
 paths:
