--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,12 +6,10 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
-  </div>
-
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 24. Februar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
+  
   Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365 Mietverhältnisse für Unternehme durch, inkl. Identitäten, Sicherheit, Konformität und unterstützenden Technologien.
-
+  
   Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
 subTitle: 'dieses examens misst Ihre Kompetenz, folgende technische Aufgaben zu erfüllen: Implementierung moderner Gerätedienste; Implementierung von Microsoft 365 Sicherheits- und Bedrohungsmanagement; und Management von Microsoft 365 Governance und Konformität.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -24,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
+- Der Inhalt dieser Prüfung wird am 24. Februar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Implementieren moderner Geräteservices (30-35%)
 - Microsoft 365 Sicherheits- und Bedrohungsmanagement implementieren (30-35%)
 - Microsoft 365-Governance und -Konformität verwalten (35-40%)
