--- a/learn-certs-pr/azure-ai-engineer.yml
+++ b/learn-certs-pr/azure-ai-engineer.yml
@@ -2,18 +2,20 @@
 title: 'Microsoft Certified: Azure AI Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure AI Engineer Associate'
-  description: 'Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.'
+  description: 'Azure AI Engineers erstellen, verwalten und stellen AI-Lösungen bereit, die Azure Cognitive Services, Azure Cognitive Search, und Microsoft Bot Framework nutzen.'
 uid: certification.azure-ai-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color="red"><strong>DIE PRÜFUNG AI-100 WIRD<a href="/learn/certifications/exams/ai-102">EXAM AI-102</a> AM 23. FEBRUAR 2021 DURCH DIE PRÜFUNG Al-102 ERSETZT. Sie können diese Zertifizierung weiterhin erhalten, indem Sie AI-100 bestehen, bevor diese am 30. Juni 2021 eingestellt wird.</strong></font><br/><br/></div>
+  
   Kandidaten für Azure AI Engineer Associate-Zertifizierung sollten über Fachkenntnisse verfügen, die kognitive Dienste, maschinelles Lernen und Knowledge-Mining nutzen, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die Verarbeitung natürlicher Sprache, Sprache, Computervision und Konversations-AI umfassen.
-
+  
   Zu den Aufgaben eines dieser Rolle gehören das Analysieren von Anforderungen für AI-Lösungen, das Empfehlen entsprechender Tools und Technologien sowie das Entwerfen und Implementieren von AI-Lösungen, die die Anforderungen an Skalierbarkeit und Leistung erfüllen.
-
+  
   Azure AI Engineers übersetzen die Ideen von Lösungsarchitekten und arbeiten mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und software Entwicklern zusammen, um komplette End-to-End-Lösungen zu entwickeln.
-
+  
   Ein Kandidat für diese Prüfung sollte über Kenntnisse und Erfahrung im Entwerfen und Implementieren von AI-Apps und Agenten verfügen, die Microsoft Azure Cognitive Services, Azure Bot-Service, Azure Cognitive Search und Datenspeicherung in Azure verwenden. Darüber hinaus sollten Kandidaten in der Lage sein, Lösungen zu empfehlen, die Open Source-Technologien verwenden, die Komponenten des Azure AI-Portfolios und die verfügbaren Datenspeicheroptionen zu verstehen und zu erkennen, wann eine benutzerdefinierte API entwickelt werden sollte, um bestimmte Anforderungen zu erfüllen.
-subTitle: Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
+subTitle: Azure AI Engineers erstellen, verwalten und stellen AI-Lösungen bereit, die Azure Cognitive Services, Azure Cognitive Search, und Microsoft Bot Framework nutzen.
 levels:
 - intermediate
 skills:
