--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -2,35 +2,33 @@
 title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
-  description: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
+  description: Azure Data Engineers integrieren, transformieren und konsolidieren Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in Strukturen, die für die Erstellung von Analyselösungen geeignet sind.
 uid: certification.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color="red"><strong>DIE PRÜFUNGEN DP-200 UND DP-201 WERDEN<a href="/learn/certifications/exams/ai-203">EXAM DP-203</a> AM 23. FEBRUAR 2021 DURCH DIE PRÜFUNG DP-203 ERSETZT. Sie können diese Zertifizierung weiterhin erhalten, indem Sie DP-200 und DP-201 bestehen, bevor diese am 30. Juni 2021 eingestellt werden.</strong></font><br/><br/></div>
+  
   Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle
-subTitle: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
+subTitle: Azure Data Engineers integrieren, transformieren und konsolidieren Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in Strukturen, die für die Erstellung von Analyselösungen geeignet sind.
 levels:
 - intermediate
 skills:
 - Implementieren von Datenspeicherlösungen
 - Verwalten und Entwickeln der Datenverarbeitung
 - Überwachen und Optimieren von Datenlösungen
-- Entwickeln von Azure-Datenspeicherlösungen.
+- Entwickeln von Azure-Datenspeicherlösungen
 - Entwerfen von Datenverarbeitungslösungen
 - Entwickeln für Datensicherheit und Compliance
 roles:
 - data-engineer
 type: role-based
 products:
-- azure
-- azure-cosmos-db
+- azure-data-factory
+- azure-synapse-analytics
+- azure-stream-analytics
+- azure-event-hubs
 - azure-data-lake
 - azure-databricks
-- azure-notebooks
-- azure-stream-analytics
-- azure-sql-database
-- azure-storage
-- azure-monitor
-- azure-hdinsight
 courses:
 - uid: course.dp-200t01
 - uid: course.dp-201t01
