--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -30,22 +30,16 @@ exams:
 - uid: exam.dp-201
 summary: |-
   In diesem Kurs werden die Teilnehmer verschiedene Data Platform Technologien in Lösungen die mit betrieblichen und technischen Anforderungen übereinstimmen, entwerfen. Dazu gehören on-premises, Cloud und Hybride Datenszenarien die relationale, NoSQL oder Data Warehouse Daten einbeziehen. Sie lernen außerdem, wie Prozessarchitekturen mit einer Reihe an Technologien für Streaming und Batchdaten verarbeitet werden. Die Teilnehmer werden das Entwerfen von Datensicherheit untersuchen, wie Datenzugriff, Datenrichtlinien und Standards. Sie werden Azure Datenlösungen entwerfen, dazu gehört die Optimierung, Verfügbarkeit und Disaster Recovery von großen Daten, Batchverarbeitung und Streamingdaten Lösungen.
-
+  
   #### Zielgruppenprofil
   Die Zielgruppe für diesen Kurs sind Datenexperten, Data Architects und Business Intelligence Experten, die eetwas über die Microsoft Azure Data Platform Technologien lernen möchten. Die sekundäre Zielgruppe für diesen Kurs sind Personen, die Anwendungen entwickeln, die Inhalte aus den Datenplattformtechnologien liefern, die auf Microsoft Azure existieren.
 prerequisitesSection: |-
-  Erfolgreiche Studenten beginnen diesen Kurs mit Kenntnissen über Cloud-Computing-Konzepte und Berufserfahrung mit Datenlösungen.
-
-  Insbesondere&#58; 
-  - Erstellen von Cloud-Ressourcen in Microsoft Azure
-  - Identifizieren von Anwendungsfällen für Big Data
-  - Verstehen, wie Cloud-Computing-Services die allgemeinen Geschäftsanforderungen erfüllen können
-
-  Um diese erforderlichen Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
-  - [Microsoft Cloud-Konzepte erkunden](/learn/paths/explore-microsoft-azure-cloud-concepts/)
-  - [Aufgaben eines Dateningenieurs identifizieren](/learn/modules/data-engineering-processes/)
-  - [Kern-Cloud-Services - Azure-Datenspeicheroptionen](/learn/modules/intro-to-data-in-azure/)
-  - [Kern-Cloud-Services - Azure-Rechenoptionen](/learn/modules/intro-to-azure-compute/)
+  Erfolgreiche Teilnehmer beginnen diesen Kurs mit Kenntnissen über cloud-Computing-Konzepte und Berufserfahrung mit Datenlösungen.
+  
+  Speziell das Ausführen von&#58;
+  - AZ-900 - Azure Fundamentals
+  - DP-900 - Microsoft Azure Data Fundamentals
+  - DP-200 – Implementing an Azure Data Solution
 outlineSection: |-
   ### Modul 1&#58; Data Platform Architecture Considerations
   In diesem Modul werden die Teilnehmer lernen, wie man sichere, skalierbare und performant Lösungen in Azure entwirft und baut, indem sie die Kernprinzipien untersuchen, die in jeder guten Architektur zu finden sind. Sie werden lernen, wie die Anwendung von Schlüsselprinzipien in der gesamten Architektur, unabhängig von der Wahl der Technologie, Ihnen dabei helfen kann, die Architektur zu entwerfen, zu bauen und kontinuierlich zum Nutzen des Unternehmens zu verbessern.
@@ -56,21 +50,20 @@ outlineSection: |-
   - Design für Verfügbarkeit und Wiederherstellung
   - Design für Effizienz und operationen
   - Fallstudien
-
-
+  
   #### Labor&#58; Fallstudien
   - Design mit beachtung der Sicherheit
   - Leistung und Skalierbarkeit beachten
   - Design für Verfügbarkeit und Wiederherstellung
   - Design für Effizienz und operationen
-
+  
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Design mit beachtung der Sicherheit
   - Leistung und Skalierbarkeit beachten
   - Design für Verfügbarkeit und Wiederherstellung
   - Design für Effizienz und operationen
-
-
+  
+  
   ### Modul 2&#58; Azure Batch Processing Reference Architectures
   In diesem Modul lernen die Teilnehmer das Referenzdesign und die Architekturmuster für den Umgang mit der Stapelverarbeitung von Daten kennen. Die Teilnehmer werden mit dem Umgang mit der Bewegung von Daten aus lokalen Systemen in ein Cloud Data Warehouse vertraut gemacht und erfahren, wie sie automatisiert werden können. Die Studenten werden auch eine KI-Architektur kennenlernen und erfahren, wie die Datenplattform mit einer KI-Lösung integriert werden kann.
   #### Lektionen
@@ -78,22 +71,20 @@ outlineSection: |-
   - Enterprise BI Solutions in Azure erstellen
   - Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
-
-
+  
   #### Labor&#58; Architect an Enterprise-grade Conversational Bot in Azure
   - Enterprise BI Solutions in Azure erstellen
   - Enterprise BI Solutions in azure automatisieren
   - Enterprise BI Solutions in azure automatisieren
-
+  
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Prinzipien der Architekturerstellung verstehen
   - Lambda Architektur für Batch Mode Perspective beschreiben
   - Enterprise BI Solutions in Azure erstellen
   - Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
-
-
-
+  
+  
   ### Modul 3&#58; Azure Real-Time Reference Architectures
   In diesem Modul lernen die Teilnehmer das Referenzdesign und die Architekturmuster für den Umgang mit Streaming-Daten kennen. ie werden lernen, wie Streaming-Daten von Event Hubs und Stream Analytics aufgenommen werden können, um eine Echtzeitanalyse der Daten zu ermöglichen. Sie werden auch eine datenwissenschaftliche Architektur erforschen, die Daten in Azure Databricks streamt, um Trendanalysen durchzuführen. Sie werden schließlich lernen, wie eine Internet of Things (IoT)-Architektur Datenplattformtechnologien zur Speicherung von Daten benötigt.
   #### Lektionen
@@ -101,20 +92,19 @@ outlineSection: |-
   - Stream Processing Pipelines mit Azure-stream-analytics bauen
   - Stream Processing Pipelines mit Azure Databricks bauen
   - Azure IoT Referenzarchitektur erstellen
-
-
+  
   #### Labor&#58; Azure Real-Time Reference Architectures
   - Stream Processing Pipelines mit Azure-stream-analytics bauen
   - Stream Processing Pipelines mit Azure Databricks bauen
   - Azure IoT Referenzarchitektur erstellen
-
+  
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Lamda Architektur für Real-Time Perspective beschreiben
   - Stream Processing Pipelines mit Azure-stream-analytics bauen
   - Stream Processing Pipelines mit Azure Databricks bauen
   - Azure IoT Referenzarchitektur erstellen
-
-
+  
+  
   ### Modul 4&#58; Data Platform Security Design Considerations
   In diesem Modul lernen die Studenten, wie sie Sicherheit in ein Architekturdesign integrieren können und  die wichtigsten Entscheidungspunkte in Azure , die zur Schaffung einer sicheren Umgebung über alle Architekturschichten hinweg beitragen.
   #### Lektionen
@@ -124,21 +114,20 @@ outlineSection: |-
   - Verschlüsselungsnutzung
   - Netzwerk Level Schutz
   - Anwendungssicherheit
-
-
+  
   #### Labor&#58; Data Platform Security Design Considerations
   - Verteidigung in Depth Security Ansatz
   - Identitätsschutz
-
-  - Nach Abschluss diese Moduls können die Teilnehmer folgende Aspekte verstehen:
+  
+  Nach Abschluss diese Moduls können die Teilnehmer folgende Aspekte verstehen&#58;
   - Verteidigung in Depth Security Ansatz
   - Verwaltung von Identitäten
   - Schutz der Infrastruktur
   - Verschlüsselungsnutzung
   - Netzwerk Level Schutz
   - Anwendungssicherheit
-
-
+  
+  
   ### Modul 5&#58; Designing for Resiliency and Scale
   In diesem Modul lernen die Teilnehmer Skalierungsdiense um Load zu verarbeiten kennen. Sie lernen, wie Netzwerk bottlenecks identifiziert werdenund Leistungsoptimierung wichtig ist um die beste Erfahrung für Nutzer zu garantieren. Sie lernen außerdem, wie Infrastruktur und Serviceversagen behoben wird, sich von Datenverlust und notfällen erholt werden kann durch Verfügbarkeits und Wiederherstellungszuweisung in der Architektur.
   #### Lektionen
@@ -149,14 +138,13 @@ outlineSection: |-
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
   - Backup und Restore Strategien erstellen
-
-
+  
   #### Labor&#58; Designing for Resiliency and Scale
   - Workload Kapazität durch Skaling anpassen
   - Optimierte Speicher und Datenbankleistung erstellen
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
-
+  
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Workload Kapazität durch Skaling anpassen
   - Netzwerkleistung optimieren
@@ -165,21 +153,20 @@ outlineSection: |-
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
   - Backup und Restore Strategien erstellen
-
-
+  
+  
   ### Modul 6&#58; Design for Efficiency and Operations
   In diesem Modul lernen die Teilnehmer, wie man eine Azure-Architektur entwirft, die betrieblich effizient ist und die Kosten durch die Reduzierung der Ausgaben minimiert. sie werden verstehen, wie man Architekturen entwirft, die Verschwendung eliminieren und ihnen volle Transparenz darüber geben, was in der Azure Umgebung der Organisation genutzt wird.
   #### Lektionen
   - Effizienz der Cloud Umgebung Maximieren
   - Monitoring und Analytics nutzen um optimale einblicke zu gewinnen
   - Automation nutzen um Aufwand und Fehler zu reduzieren
-
-
+  
   #### Labor&#58; Design for Efficiency and Operations
   - Effizienz der Cloudumgebung maximieren
   - Monitoring und Analytics nutzen um optimale einblicke zu gewinnen
   - Automation nutzen um Aufwand und Fehler zu reduzieren
-
+  
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Effizienz der Cloudumgebung maximieren
   - Monitoring und Analytics nutzen um optimale einblicke zu gewinnen
