--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -6,12 +6,10 @@ metadata:
 uid: exam.ms-100
 displayName: MS-100
 summary: |-
-  <div>
-  <div><strong>Der Inhalt dieser Prüfung wurde am 24. September 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
-  </div>
-
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 24. Februar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
+  
   Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365 Mietverhältnisse für Unternehme durch, inkl. Identitäten, Sicherheit, Konformität und unterstützenden Technologien.
-
+  
   Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwurf und Implementieren von Microsoft 365-Diensten, Verwaltung von Benutzeridentität und -rollen, Verwaltung von Zugriff und Authentifizierung, und Planung von Office 365-Workloads und -Anwendungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -24,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 24. Februar 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Entwerfen und Implementieren von Microsoft 365-Services (25-30%)
 - Benutzeridentität und Rollen verwalten (35-40%)
 - Zugriff und Authentifizierung verwalten (20-25%)
